--- a/index.html
+++ b/index.html
@@ -104,48 +104,46 @@
     <!-- Templates -->
     <template id="feed-item-template">
         <article class="feed-card">
-            <div class="card-content">
-                <div class="card-meta">
-                    <span class="source-badge"></span>
-                    <span class="date"></span>
-                </div>
-                <h2 class="card-title"><a href="#" target="_blank" rel="noopener noreferrer"></a></h2>
-                <p class="card-summary"></p>
-                <div class="card-footer">
-                    <span class="author"></span>
-                    <div class="card-actions">
-                        <button class="action-btn favorite-btn" aria-label="Favorite">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round">
-                                <polygon
-                                    points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
-                                </polygon>
-                            </svg>
-                        </button>
-                        <button class="action-btn read-toggle-btn" aria-label="Mark as read" title="Mark as read">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round">
-                                <circle cx="12" cy="12" r="10"></circle>
-                                <polyline points="12 6 12 12 16 14"></polyline>
-                            </svg>
-                        </button>
-                        <button class="action-btn hide-btn" aria-label="Hide">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round">
-                                <polyline points="3 6 5 6 21 6"></polyline>
-                                <path
-                                    d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2">
-                                </path>
-                            </svg>
-                        </button>
+            <div class="card-body">
+                <div class="card-content">
+                    <div class="card-meta">
+                        <span class="source-badge"></span>
+                        <span class="date"></span>
                     </div>
+                    <h2 class="card-title"><a href="#" target="_blank" rel="noopener noreferrer"></a></h2>
+                    <p class="card-summary"></p>
+                </div>
+                <div class="card-image-wrapper" style="display: none;">
+                    <img src="" alt="" class="card-image" loading="lazy">
                 </div>
             </div>
-            <div class="card-image-wrapper" style="display: none;">
-                <img src="" alt="" class="card-image" loading="lazy">
+            <div class="card-footer">
+                <span class="author"></span>
+                <div class="card-actions">
+                    <button class="action-btn favorite-btn" aria-label="Favorite">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <polygon
+                                points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2">
+                            </polygon>
+                        </svg>
+                    </button>
+                    <button class="action-btn read-toggle-btn" aria-label="Mark as read" title="Mark as read">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <polyline points="12 6 12 12 16 14"></polyline>
+                        </svg>
+                    </button>
+                    <button class="action-btn hide-btn" aria-label="Hide">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <polyline points="3 6 5 6 21 6"></polyline>
+                            <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2">
+                            </path>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </article>
     </template>
