feeds fixed and now loaded directly :)

--- a/index.html
+++ b/index.html
@@ -590,6 +590,13 @@
         </article>
     </template>
 
+    <!-- YAML Parser -->
+    <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
+
+    <!-- RSS Parser Module -->
+    <script src="js/rss-parser.js"></script>
+
+    <!-- Main Application -->
     <script src="js/app.js"></script>
 </body>
 
