change text on config page

--- a/index.html
+++ b/index.html
@@ -95,31 +95,23 @@
         <!-- Config Manager View -->
         <div id="view-config" class="view-section hidden">
             <div class="config-manager">
-                <h2>Configuration Management</h2>
+                <h2>Settings</h2>
 
                 <div class="config-info">
-                    <h3>How It Works</h3>
-                    <p>Your widget configuration is automatically saved in your browser's local storage. You can export and import your configuration as a YAML file to:</p>
+                    <h3>Saving and exporting</h3>
+                    <p>Your widgets are saved in your browser's local storage. You can export/import them as a YAML file to:</p>
                     <ul>
-                        <li>Backup your widgets and settings</li>
-                        <li>Transfer your configuration to another browser or device</li>
-                        <li>Share your setup with others</li>
-                        <li>Keep multiple configuration profiles</li>
-                    </ul>
-                    <br>
-                    <h3>What Gets Saved</h3>
-                    <ul>
-                        <li><strong>Widgets:</strong> All your widgets</li>
-                        <li><strong>Widget Content:</strong> Bookmark URLs, launchpad sites, note text, todo items</li>
-                        <li><strong>Settings:</strong> Theme preference (light/dark mode)</li>
-                        <li><strong>Weather:</strong> Only locations (weather data is fetched fresh on import)</li>
+                        <li><strong>Backup</strong> your widgets and content</li>
+                        <li><strong>Transfer</strong> them to another device</li>
+                        <li><strong>Share</strong> your setup with others</li>
+                        <li><strong>Keep</strong> multiple configurations</li>
                     </ul>
                 </div>
 
                 <div class="config-actions">
                     <div class="config-action-card">
                         <h3>Export Configuration</h3>
-                        <p>Download your current configuration as a YAML file. This creates a backup of all your widgets and settings.</p>
+                        <p>Download your current configuration as a YAML file. This creates a backup of all your widgets and content.</p>
                         <div class="button-group">
                             <button id="export-config-action" class="primary-btn">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
