--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kito</title>
-    <meta name="description" content="kito - A personal newsfeed aggregator.">
+    <title>kito - calmly organize the web</title>
+    <meta name="description" content="kito is a personal dashboard to organize your bookmarks, notes, weather, and more.">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
